[tool.poetry]
name = "london-flat-finder"
version = "0.1.0"
description = ""
authors = ["Mateusz Wasilewski <mateusz.wasilewski@biorelate.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
